# JobSeeker

./: README.md  pyproject.toml
authentication/: admin.py  forms.py  middleware.py  models.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
authentication/static/authentication/css/: navbar.css  styles.css
authentication/static/authentication/js/: login.js  navbar.js
authentication/templates/authentication/: base.html  login.html  register.html  register_employer.html
employees/: admin.py  forms.py  models.py  urls.py  views.py
employees/migrations/: 0001_initial.py  0002_alter_applicantprofile_email.py  0003_alter_applicantprofile_email_and_more.py  0004_alter_jobapplication_resume.py  0005_jobapplication_is_applied.py
employees/static/employees/css/: applications.css  home.css  job_detail.css  profile.css
employees/static/employees/js/: listings.js
employees/templates/employees/: applicant_profile.html  applications.html  home.html  job_apply.html  job_detail.html  listings.html  profile.html
employers/: admin.py  forms.py  models.py  urls.py  views.py
employers/migrations/: 0001_initial.py  0002_alter_joblisting_profile.py
employers/static/employers/css/: 404.css  profile.css
employers/templates/employers/: 404.html  applicants.html  company_profile.html  list_job.html  listed_jobs.html
jobseeker/: settings.py  urls.py
